css/style.css
/* Custom Stylesheet */
/**
 * Use this file to override Materialize files so you can update
 * the core Materialize files in the future
 *
 * Made By MaterializeCSS.com
 */

nav ul a,
nav .brand-logo {
  color: #444;
}

p {
  line-height: 2rem;
}

.button-collapse {
  color: #26a69a;
}

.parallax-container {
  min-height: 380px;
  line-height: 0;
  height: auto;
  color: rgba(255,255,255,.9);
}
  .parallax-container .section {
    width: 100%;
  }

@media only screen and (max-width : 992px) {
  .parallax-container .section {
    position: absolute;
    top: 40%;
  }
  #index-banner .section {
    top: 10%;
  }
}

@media only screen and (max-width : 600px) {
  #index-banner .section {
    top: 0;
  }
}

.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
  font-size: inherit;
}

footer.page-footer {
  margin: 0;
}

.p-top10{
  padding-top: 10px;
}

.p-bottom10{
  padding-bottom: 10px;
}

.p-right10{
  padding-right: 10px;
}

.p-left10{
  padding-left: 10px;
}

.p-top5{
  padding-top: 5px;
}

.p-bottom5{
  padding-bottom: 5px;
}

.p-right5{
  padding-right: 5px;
}

.p-left5{
  padding-left: 5px;
}

/* navBar */
.logo{
  padding-top: 3px;
  width: 10%
}

.h-logo{
  padding-top: 3px !important;
}

.menu-item{

}

.menu-a {
  height: 110px;
}

.menu-item-r{
  padding-right: 10px;
}
.menu-item-l{}

#nav{
  height: 110px;
}

.nav-img{
  margin-top: 33px;
  height: 35.7 !important;
  width: 149.6 !important;
}

.logo-img{
  margin-top: 5px;
}

.nav-hamburger{
  margin-top: 25px;
}

.parallax-container {
      height: 675px;
}

/*colors*/
.st-blue{
  background-color: #283278 !important;
}

.st-footer{
  padding: 10px
}

.st-blue-font{
  color: #283278;
}

.addr{
  margin-top: 4px;
  margin-bottom: 0px;
}

.btn-dir{
  font-size: 12px;
}

/*maps*/
#map {
  width: 100%;
  height: 400px;
}

